Fix for chip pins getting squished in sockets.

--- a/css/game.css
+++ b/css/game.css
@@ -164,7 +164,6 @@ h1 {
   flex-direction: column;
   align-items: center;
   justify-content: space-around;
-  height: 100%;
 }
 .pin {
   width: 0.5rem;
